fix images of speakers

--- a/index.html
+++ b/index.html
@@ -34,44 +34,35 @@
 			<div class="container">
 				<header class="major">
 					<h2>Speakers</h2>
-					<h4>+ more TBC</h4>
 				</header>
+				<!-- <p>More to be announced</p> -->
+				<div class="row gtr-150">
+					
+					<div class="col-3 col-6-medium">
+						<span class="image fit"><img src="images/bengio.jpg" alt="Yoshua Bengio"></span>
+						<h3><a href="https://yoshuabengio.org/">Yoshua Bengio</a></h3>
+						<p>MILA</p>
+					</div>
+					
+					<div class="col-3 col-6-medium">
+						<span class="image fit"><img src="images/pineau.jpg" alt="Joelle Pineau"></span>
+						<h3><a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a></h3>
+						<p>FAIR, MILA, McGill</p>
+					</div>
 
-				  <div class="row">
+					<div class="col-3 col-6-medium">
+						<span class="image fit"><img src="images/bach.jpg" alt="Francis Bach"></span>
+						<h3><a href="https://www.di.ens.fr/~fbach/">Francis Bach</a></h3>
+						<p>INRIA</p>
+					</div>
 
-					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center" style="height: 300px">
-					  <img src="images/bengio.jpg" alt="Yoshua Bengio" style="max-width: 200px">
-					  <br>
-					  <a href="https://yoshuabengio.org/">Yoshua Bengio</a>
-					  <br>
-					  MILA
-					  </div>
+					<div class="col-3 col-6-medium">
+						<span class="image fit"><img src="images/forde.jpg" alt="Jessica Zosa Forde"></span>
+						<h3><a href="https://scholar.google.com/citations?user=1k12VDMAAAAJ&hl=en">Jessica Zosa Forde</a></h3>
+						<p>Brown University</p>
+					</div>
 
-					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center" style="height: 300px">
-					  <img src="images/pineau.jpg" alt="Joelle Pineau" style="max-width: 200px">
-					  <br>
-					  <a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a>
-					  <br>
-					  FAIR / MILA / McGill
-					  </div>
-
-					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center" style="height: 300px">
-					  <img src="https://www.di.ens.fr/~fbach/francis_bach_septembre_2016_small.jpg" alt="Francis Bach" style="max-width: 200px">
-					  <br>
-					  <a href="https://www.di.ens.fr/~fbach/">Francis Bach</a>
-					  <br>
-					  INRIA
-					  </div>
-
-					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center" style="height: 300px">
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" alt="Jessica Zosa Forde" style="max-width: 200px">
-					  <br>
-					  <a href="https://scholar.google.com/citations?user=1k12VDMAAAAJ&hl=en">Jessica Zosa Forde</a>
-					  <br>
-					  Brown University
-					  </div>
-
-				  </div>
+				</div>
 			</div>
 
 		</section>
