Modify Jessica's website

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 					<div class="col-3 col-6-medium">
 						<span class="image fit"><img src="images/forde.jpg" alt="Jessica Zosa Forde"></span>
-						<h3><a href="https://scholar.google.com/citations?user=1k12VDMAAAAJ&hl=en">Jessica Zosa Forde</a></h3>
+						<h3><a href="https://jzf2101.github.io/">Jessica Zosa Forde</a></h3>
 						<p>Brown University</p>
 					</div>
 
