--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
 				<!-- <p>More to be announced</p> -->
 				<div class="row gtr-150">
 					
-					<div class="col-3 col-6-medium">
+					<div class="col-3 col-6-small">
 						<span class="image fit"><img src="images/bengio.jpg" alt="Yoshua Bengio"></span>
 						<h3><a href="https://yoshuabengio.org/">Yoshua Bengio</a></h3>
 						<p>MILA</p>
 					</div>
 					
-					<div class="col-3 col-6-medium">
+					<div class="col-3 col-6-small">
 						<span class="image fit"><img src="images/pineau.jpg" alt="Joelle Pineau"></span>
 						<h3><a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a></h3>
 						<p>FAIR, MILA, McGill</p>
 					</div>
 
-					<div class="col-3 col-6-medium">
+					<div class="col-3 col-6-small">
 						<span class="image fit"><img src="images/bach.jpg" alt="Francis Bach"></span>
 						<h3><a href="https://www.di.ens.fr/~fbach/">Francis Bach</a></h3>
 						<p>INRIA</p>
 					</div>
 
-					<div class="col-3 col-6-medium">
+					<div class="col-3 col-6-small">
 						<span class="image fit"><img src="images/forde.jpg" alt="Jessica Zosa Forde"></span>
 						<h3><a href="https://scholar.google.com/citations?user=1k12VDMAAAAJ&hl=en">Jessica Zosa Forde</a></h3>
 						<p>Brown University</p>
@@ -147,8 +147,8 @@
 					Finally, the clear separation between hypothesizing and confirmation (absent in the current review model) will raise the statistical significance of the results.
 					<br/>
 					<br/>
-					We are inviting submissions on the broad range of topics covered at <a href="https://neurips.cc/Conferences/2020/PaperInformation/SubjectAreas">NeurIPS</a>! Please see the tutorial linked below for the spirit of the workshop and how to prepare a submission.
-					Pre-registered papers will be published at the workshop. We will then support and encourage final results to be submitted in combination with the pre-registered paper, to a special issue journal in 2021 (TBD, more info soon).
+					We are inviting submissions on the broad range of topics covered at <a href="https://neurips.cc/Conferences/2020/PaperInformation/SubjectAreas">NeurIPS</a>! The <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a> is structured like a <a href="author-kit/tutorial.pdf">mini-tutorial</a> on the pre-registration process to get you started quickly.
+					Pre-registered papers will be published at the workshop. The final results will be published in the Proceedings of Machine Learning Research (<a href="http://proceedings.mlr.press/">PMLR</a>), a sister publication to the Journal of Machine Learning Research (<a href="https://www.jmlr.org/">JMLR</a>).
 				</div>
 			</div>
 		</section>
@@ -195,31 +195,34 @@
 					<h2>FAQs</h2>
 				</header>
 				<ul class="spacious">
-					<li>Where is the link to the pilot workshop you did at ICCV 2019? <a href="iccv2019.html">Here</a> (we will better integrate it with the website soon).</li>
-					<li>I have read the tutorial. Can you point me to a <strong>concrete example</strong> of a ML paper written with this spirit in mind? <a href="https://preregister.vision/papers/an_empirical_study_of_the_relation_between_network_architecture_and_complexity.pdf"><i>An empirical study of the relation between network architecture and complexity</i></a>, by Emir Konuk & Kevin Smith, won the best paper award at the pilot we run at ICCV 2019.</li>
-					<li><strong>Don't we need a positive publication bias? After all, there many more ideas that don't work than ones that do. Why is it useful to allow negative results?</strong>
+					<li><strong>Where is the link to the pilot workshop you did at ICCV 2019?</strong><br>
+						The previous edition of the workshop can be found <a href="iccv2019.html">here</a>.</li>
+					<li><strong>I have read the tutorial. Can you point me to a concrete example of a ML paper written with this spirit in mind?</strong><br>
+						<a href="https://preregister.vision/papers/an_empirical_study_of_the_relation_between_network_architecture_and_complexity.pdf"><i>An empirical study of the relation between network architecture and complexity</i></a>, by Emir Konuk & Kevin Smith, won the best paper award at the pilot we run at ICCV 2019.</li>
+					<li><strong>Don't we need a positive publication bias? After all, there many more ideas that don't work than ones that do. Why is it useful to allow negative results?</strong><br>
 						There are several benefits to publishing negative results.  If an idea is well-motivated and intuitively appealing, it may be needlessly repeated by multiple groups who replicate the negative outcome, but do not have a venue for sharing this knowledge with the community (see the CVPR 2017 workshop on <a href="http://negative.vision/">negative results</a> for a more detailed discussion of the benefits of publishing negative outcomes).
 					</li>
-					<li><strong>How does exploratory data analysis fit into this model?</strong>
+					<li><strong>How does exploratory data analysis fit into this model?</strong><br>
 						Exploratory analysis can come in multiple forms including:
 						(1) Small scale experiments (typically on toy data);
 						(2) Results listed in prior work.
 						Both should be reported in the proposal paper as part of the justification for your idea. Neither should be considered by the reader of your paper as providing <em>confirmatory evidence</em> in support of your hypothesis (the goal of preregistration is to make this distinction explicit). By contrast, the confirmatory experimental protocol which you propose should seek to rigorously evaluate your hypothesis and must be performed on different data to your own exploratory experiments. However, for practical reasons, it may use datasets that have also been previously used in the literature (further discussion below).
 					</li>
-					<li><strong>What's the rationale for changing the review model?</strong>
+					<li><strong>What's the rationale for changing the review model?</strong><br>
 						&ldquo;Preregistration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research. Both are important. But the same data cannot be used to generate and test a hypothesis, which can happen unintentionally and reduces the credibility of your results. Addressing this problem through planning improves the quality and transparency of your research, helping others who may wish to build on it.&rdquo; (source: <a href="https://cos.io/prereg/">cos.io</a>)
 					</li>
 <!--					<li><strong>Will the papers be published in the ICCV proceedings?</strong>-->
 <!--						Yes. The proposal papers will be published in the ICCV proceedings, and available on IEEE Xplore and <a href="https://www.thecvf.com" target="_blank">CVF Open Access</a>. Due to the non-standard nature of the review process (experiments are published only many months after review), the results will be made available as an addendum to the proposal paper.-->
 <!--					</li>-->
 
-					<li><strong>Doesn't prior work on existing benchmarks weaken my confirmatory experiments?</strong>
+					<li><strong>Doesn't prior work on existing benchmarks weaken my confirmatory experiments?</strong><br>
 						Yes.  Each prior result reported on a dataset leaks information that reduces its statistical utility (we are strongly in favour of limited-evaluation benchmarks for this reason).  Unfortunately, from a pragmatic perspective, it is infeasible to expect every computer vision researcher to collect a new dataset for each hypothesis they wish to evaluate, so we must strike a reasonable balance here.
 					</li>
-					<li><strong>Is it OK to make changes to the preregistered experimental protocol?</strong>
+					<li><strong>Is it OK to make changes to the preregistered experimental protocol?</strong><br>
 						Although you should endeavour to follow the proposed experimental protocol as closely as possible, you may find that it is necessary to make small changes or refinements.  These changes should be carefully documented when reporting the experimental results: it is important to make clear which protocols have been modified after observing the evidence.
 					</li>
-					<li><strong>Where can I found more information about preregistration?</strong> There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
+					<li><strong>Where can I found more information about preregistration?</strong><br>
+						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
 						<ul>
 							<li><a href="https://www.pnas.org/content/115/11/2600">The preregistration revolution</a></li>
 							<li><a href="https://www.nature.com/articles/s41562-016-0021">A manifesto for reproducible science</a></li>
@@ -236,50 +239,6 @@
 <!--				<header class="major">-->
 <!--					<h2>Organising commiteee</h2>-->
 <!--				</header>-->
-
-<!--				  <div class="row">-->
-
-<!--					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 col-lg-offset-1 col-xl-offset-1 text-center">-->
-<!--					  <img src="images/pineau.jpg" alt="Joelle Pineau" style="max-width: 150px">-->
-<!--					  <br>-->
-<!--					  <a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a>-->
-<!--					  <br>-->
-<!--					  FAIR / MILA / McGill-->
-<!--					  </div>-->
-
-<!--					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center">-->
-<!--					  <img src="https://www.di.ens.fr/~fbach/francis_bach_septembre_2016_small.jpg" alt="Francis Bach" style="max-width: 150px">-->
-<!--					  <br>-->
-<!--					  <a href="https://www.di.ens.fr/~fbach/">Francis Bach</a>-->
-<!--					  <br>-->
-<!--					  INRIA-->
-<!--					  </div>-->
-
-<!--					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center">-->
-<!--					  <img src="images/pineau.jpg" alt="Joelle Pineau" style="max-width: 150px">-->
-<!--					  <br>-->
-<!--					  <a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a>-->
-<!--					  <br>-->
-<!--					  FAIR / MILA / McGill-->
-<!--					  </div>-->
-
-<!--					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center">-->
-<!--					  <img src="https://www.di.ens.fr/~fbach/francis_bach_septembre_2016_small.jpg" alt="Francis Bach" style="max-width: 150px">-->
-<!--					  <br>-->
-<!--					  <a href="https://www.di.ens.fr/~fbach/">Francis Bach</a>-->
-<!--					  <br>-->
-<!--					  INRIA-->
-<!--					  </div>-->
-
-<!--					  <div class="col-xs-6 col-sm-4 col-lg-2 col-xl-2 text-center">-->
-<!--					  <img src="images/pineau.jpg" alt="Joelle Pineau" style="max-width: 150px">-->
-<!--					  <br>-->
-<!--					  <a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a>-->
-<!--					  <br>-->
-<!--					  FAIR / MILA / McGill-->
-<!--					  </div>-->
-<!--				  </div>-->
-<!--			</div>-->
 
 <!--		</section>-->
 
