minor text edits for clarity, added PMLR link

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3 style="background-color: rgba(0,0,0,0.1)">A <a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop</h3>
-				<h4>(Submission deadline on October the 7th)</h4>
+				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop</h3>
+				<h4>Submission deadline (proposal only): October 7th</h4>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
@@ -164,14 +164,14 @@
 
 					<h3>Proposal paper</h3>
 					<ul>
-						<li>Read our <a href="author-kit/tutorial.pdf"><strong>tutorial</strong></a> - it describes the submission format, the pre-registration spirit and the motivations behind this workshop.</li>
+						<li>Read our <a href="author-kit/tutorial.pdf"><strong>mini-tutorial/template</strong></a> &mdash; it serves as a paper template, describes the submission process and the intended spirit of a pre-registration.</li>
 						<li><strong>Submit</strong> your paper anonymously to <a href="https://cmt3.research.microsoft.com/NeurIPSWorkshopPrereg2020">CMT</a>.
 							Differently from traditional submissions, the experimental section must only contain a description of experiments and protocol, and what conclusions can be drawn in different cases, without the results themselves.
-							The pre-registration proposal should not exceed <strong>five pages</strong> (excluding references) and use the <a href="author-kit/neurips2020_preregistration_template.zip">NeurIPS paper template</a>. <strong>The deadline for submissions is <strong style="color:red">October 7th.</strong></strong>
+							The pre-registration proposal should not exceed <strong>five pages</strong> (excluding references) and use the <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a>. <strong>The deadline for submissions is <strong style="color:red">October 7th.</strong></strong>
 						<li>Besides quality and potential impact of the idea, reviewers will also assess: (1) Are the experiments appropriate for validating the core hypothesis of the work?
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
 						You will then have a <strong>rebuttal period (until October 27th)</strong> to address the comments of the reviewers, by writing (up to) a single page response.
-						<li><strong>Decisions will be sent to authors by October the 30th</strong>.</li>
+						<li><strong>Decisions will be sent to authors by October 30th</strong>.</li>
 						<li><strong>On the day of the workop (December 11th or 12th, <strong style="color:red">remote</strong>)</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
 					</ul>
 
@@ -181,9 +181,9 @@
 					<li>The results will be presented in second document known as the results paper.
 <!--						<strong>The results paper consists of just the &ldquo;experimental results&rdquo; and &ldquo;conclusions&rdquo; sections of standard publications</strong>.-->
 					This will be appended to the proposal paper to form the complete document.
-					The deadline for the results paper is going to be in April, 2021 (TBC).</li>
-					<li>We will then support and encourage final results to be submitted to a special issue journal in combination with the pre-registered paper in April 2021 (TBC, more info soon).</li>
-					<li>In case of interest, we will also organise a second virtual meeting at the end of April 2021 to discuss the experimental results and the lessson learned.</li>
+					The deadline for the results paper is going to be in April, 2021 (tentative).</li>
+					<li>We will then support and encourage the final results to be published at the <a href="http://proceedings.mlr.press/">PMLR</a> in combination with the pre-registered paper in April 2021 (tentative).</li>
+					<li>In case of interest, we will also organise a second virtual meeting at the end of April 2021 to discuss the experimental results and the lesssons learned.</li>
 					</ul>
 				</div>
 			</div>
