better formatting, template links

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</section>
 
 		<!-- ------------------------------------------------------------------------------------------------------->
-		<section class="main style1" style="padding: 2em 2em 2em 2em">
+		<section class="main style1">
 			<div class="container">
 				<div class="row gtr-0">
 					<div class="col-3">
@@ -101,6 +101,8 @@
 							<li>Papers are evaluated on the basis of scientific interest, not whether they achieve the best results</li>
 						</ul>
 					</div>
+				</div>
+				<div class="row gtr-0">
 					<div class="col-3">
 						<ul class="major-icons">
 							<li><span class="icon major fa-rocket"></span></li>
@@ -123,32 +125,29 @@
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
-		<section class="main style2" style="padding: 2em 2em 2em 2em">
+		<section class="main style2">
 			<div class="container">
 				<header class="major special">
 					<h2>Call for Papers</h2>
 				</header>
 				<div class="container">
-
-					<strong>What is pre-registration and how does it improve peer review?</strong>
-					Benchmarks on popular datasets have played a key role in the considerable measurable progress that machine learning has made in the last few years.
-					<br />
-					But reviewers can be tempted to prioritize incremental improvements in benchmarks to the detriment of other scientific criteria, destroying many good ideas in their infancy.
-					Authors can also feel obligated to make orthogonal improvements in order to “beat the state-of-the-art”, making the main contribution hard to assess.
-					<br /><br />
-					Pre-registration changes the incentives by <i>reviewing and accepting a paper before experiments are conducted</i>.
-
-					The emphasis of peer-review will be on whether the experiment plan can adequately prove or disprove one (or more) hypotheses.
-
-					Some results will be negative, and this is welcomed.
-
-					This way, good ideas that do not work will get published, instead of filed away and wastefully replicated many times by different groups.
-
-					Finally, the clear separation between hypothesizing and confirmation (absent in the current review model) will raise the statistical significance of the results.
-					<br/>
-					<br/>
-					We are inviting submissions on the broad range of topics covered at <a href="https://neurips.cc/Conferences/2020/PaperInformation/SubjectAreas">NeurIPS</a>! The <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a> is structured like a <a href="author-kit/tutorial.pdf">mini-tutorial</a> on the pre-registration process to get you started quickly.
-					Pre-registered papers will be published at the workshop. The final results will be published in the Proceedings of Machine Learning Research (<a href="http://proceedings.mlr.press/">PMLR</a>), a sister publication to the Journal of Machine Learning Research (<a href="https://www.jmlr.org/">JMLR</a>).
+					<p>
+						<strong>What is pre-registration and how does it improve peer review?</strong>
+						Benchmarks on popular datasets have played a key role in the considerable measurable progress that machine learning has made in the last few years.
+						But reviewers can be tempted to prioritize incremental improvements in benchmarks to the detriment of other scientific criteria, destroying many good ideas in their infancy.
+						Authors can also feel obligated to make orthogonal improvements in order to “beat the state-of-the-art”, making the main contribution hard to assess.
+					</p>
+					<p>
+						Pre-registration changes the incentives by <i>reviewing and accepting a paper before experiments are conducted</i>.
+						The emphasis of peer-review will be on whether the experiment plan can adequately prove or disprove one (or more) hypotheses.
+						Some results will be negative, and this is welcomed.
+						This way, good ideas that do not work will get published, instead of filed away and wastefully replicated many times by different groups.
+						Finally, the clear separation between hypothesizing and confirmation (absent in the current review model) will raise the statistical significance of the results.
+					</p>
+					<p>
+						We are inviting submissions on the broad range of topics covered at <a href="https://neurips.cc/Conferences/2020/PaperInformation/SubjectAreas">NeurIPS</a>! The <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a> is structured like a <a href="author-kit/tutorial.pdf">mini-tutorial</a> on the pre-registration process to get you started quickly.
+						Pre-registered papers will be published at the workshop. The final results will be published in the Proceedings of Machine Learning Research (<a href="http://proceedings.mlr.press/">PMLR</a>), a sister publication to the Journal of Machine Learning Research (<a href="https://www.jmlr.org/">JMLR</a>).
+					</p>
 				</div>
 			</div>
 		</section>
@@ -164,7 +163,7 @@
 
 					<h3>Proposal paper</h3>
 					<ul>
-						<li>Read our <a href="author-kit/tutorial.pdf"><strong>mini-tutorial/template</strong></a> &mdash; it serves as a paper template, describes the submission process and the intended spirit of a pre-registration.</li>
+						<li>Read our <a href="author-kit/neurips2020_preregistration_template.zip"><strong>mini-tutorial/template</strong></a> (<a href="author-kit/tutorial.pdf">PDF</a>) &mdash; it serves as a paper template, describes the submission process and the intended spirit of a pre-registration.</li>
 						<li><strong>Submit</strong> your paper anonymously to <a href="https://cmt3.research.microsoft.com/NeurIPSWorkshopPrereg2020">CMT</a>.
 							Differently from traditional submissions, the experimental section must only contain a description of experiments and protocol, and what conclusions can be drawn in different cases, without the results themselves.
 							The pre-registration proposal should not exceed <strong>five pages</strong> (excluding references) and use the <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a>. <strong>The deadline for submissions is <strong style="color:red">October 7th.</strong></strong>
