--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
 					
 					<div class="col-2 col-4-medium">
 						<span class="image fit">
-							<!-- <img src="images/michela.jpg" alt="Michela Paganini"> -->
-							<img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" style="background: lightgrey">
+							<span class="image fit"><img src="images/michela.png" alt="Michela Paganini"></span>
 						</span>
 						<h3><a href="https://mickypaganini.github.io/">Michela Paganini</a></h3>
 						<p>Facebook AI Research</p>
