--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 					<h2>Questions?</h2>
 				</header>
 				<ul class="actions special">
-					<li><a href="https://groups.google.com/g/preregistration2020" class="button wide primary">Workshop Forum</a></li>
+					<li><a href="mailto:preregistration2020@googlegroups.com" class="button wide primary">Contact us</a></li>
 				</ul>
 			</div>
 		</section>
