fix iccv19 link

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				</header>
 				<ul class="spacious">
 					<li><strong>Where is the link to the pilot workshop you did at ICCV 2019?</strong><br>
-						The previous edition of the workshop can be found <a href="iccv2019.html">here</a>.</li>
+						The previous edition of the workshop can be found <a href="https://preregister.vision">here</a>.</li>
 					<li><strong>I have read the tutorial. Can you point me to a concrete example of a ML paper written with this spirit in mind?</strong><br>
 						<a href="https://preregister.vision/papers/an_empirical_study_of_the_relation_between_network_architecture_and_complexity.pdf"><i>An empirical study of the relation between network architecture and complexity</i></a>, by Emir Konuk & Kevin Smith, won the best paper award at the pilot we run at ICCV 2019.</li>
 					<li><strong>Don't we need a positive publication bias? After all, there many more ideas that don't work than ones that do. Why is it useful to allow negative results?</strong><br>
