--- a/index.html
+++ b/index.html
@@ -195,12 +195,17 @@
 					<h2>FAQs</h2>
 				</header>
 				<ul class="spacious">
-					<li><strong>Where is the link to the pilot workshop you did at ICCV 2019?</strong><br>
-						The previous edition of the workshop can be found <a href="https://preregister.vision">here</a>.</li>
-					<li><strong>I have read the tutorial. Can you point me to a concrete example of a ML paper written with this spirit in mind?</strong><br>
-						<a href="https://preregister.vision/papers/an_empirical_study_of_the_relation_between_network_architecture_and_complexity.pdf"><i>An empirical study of the relation between network architecture and complexity</i></a>, by Emir Konuk & Kevin Smith, won the best paper award at the pilot we run at ICCV 2019.</li>
 					<li><strong>Don't we need a positive publication bias? After all, there many more ideas that don't work than ones that do. Why is it useful to allow negative results?</strong><br>
 						There are several benefits to publishing negative results.  If an idea is well-motivated and intuitively appealing, it may be needlessly repeated by multiple groups who replicate the negative outcome, but do not have a venue for sharing this knowledge with the community (see the CVPR 2017 workshop on <a href="http://negative.vision/">negative results</a> for a more detailed discussion of the benefits of publishing negative outcomes).
+					</li>
+					<li><strong>Doesn't prior work on existing benchmarks weaken my confirmatory experiments?</strong><br>
+						Yes.  Each prior result reported on a dataset leaks information that reduces its statistical utility (we are strongly in favour of limited-evaluation benchmarks for this reason).  Unfortunately, from a pragmatic perspective, it is infeasible to expect every computer vision researcher to collect a new dataset for each hypothesis they wish to evaluate, so we must strike a reasonable balance here.
+					</li>
+					<li><strong>Is it OK to make changes to the preregistered experimental protocol?</strong><br>
+						Although you should endeavour to follow the proposed experimental protocol as closely as possible, you may find that it is necessary to make small changes or refinements.  These changes should be carefully documented when reporting the experimental results: it is important to make clear which protocols have been modified after observing the evidence.
+					</li>
+					<li><strong>What prevents authors from secretly running experiments, and submitting a proposal omitting them?</strong><br>
+						We cannot fully prevent unethical practices, but this is a risky strategy. The reviewers assume that no experiments were ran yet, so they can request significant changes to the protocol. This means that there is a significant chance those results cannot be used.
 					</li>
 					<li><strong>How does exploratory data analysis fit into this model?</strong><br>
 						Exploratory analysis can come in multiple forms including:
@@ -211,15 +216,11 @@
 					<li><strong>What's the rationale for changing the review model?</strong><br>
 						&ldquo;Preregistration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research. Both are important. But the same data cannot be used to generate and test a hypothesis, which can happen unintentionally and reduces the credibility of your results. Addressing this problem through planning improves the quality and transparency of your research, helping others who may wish to build on it.&rdquo; (source: <a href="https://cos.io/prereg/">cos.io</a>)
 					</li>
-<!--					<li><strong>Will the papers be published in the ICCV proceedings?</strong>-->
-<!--						Yes. The proposal papers will be published in the ICCV proceedings, and available on IEEE Xplore and <a href="https://www.thecvf.com" target="_blank">CVF Open Access</a>. Due to the non-standard nature of the review process (experiments are published only many months after review), the results will be made available as an addendum to the proposal paper.-->
-<!--					</li>-->
-
-					<li><strong>Doesn't prior work on existing benchmarks weaken my confirmatory experiments?</strong><br>
-						Yes.  Each prior result reported on a dataset leaks information that reduces its statistical utility (we are strongly in favour of limited-evaluation benchmarks for this reason).  Unfortunately, from a pragmatic perspective, it is infeasible to expect every computer vision researcher to collect a new dataset for each hypothesis they wish to evaluate, so we must strike a reasonable balance here.
+					<li><strong>I have read the tutorial. Can you point me to a concrete example of a ML paper written with this spirit in mind?</strong><br>
+						<a href="https://preregister.vision/papers/an_empirical_study_of_the_relation_between_network_architecture_and_complexity.pdf"><i>An empirical study of the relation between network architecture and complexity</i></a>, by Emir Konuk & Kevin Smith, won the best paper award at the pilot we run at ICCV 2019.
 					</li>
-					<li><strong>Is it OK to make changes to the preregistered experimental protocol?</strong><br>
-						Although you should endeavour to follow the proposed experimental protocol as closely as possible, you may find that it is necessary to make small changes or refinements.  These changes should be carefully documented when reporting the experimental results: it is important to make clear which protocols have been modified after observing the evidence.
+					<li><strong>Where is the link to the pilot workshop you did at ICCV 2019?</strong><br>
+						The previous edition of the workshop can be found <a href="https://preregister.vision">here</a>.
 					</li>
 					<li><strong>Where can I found more information about preregistration?</strong><br>
 						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
