--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
 				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop</h3>
-				<h4>Submission deadline (proposal only): October 7th</h4>
+				<h4>Submission deadline (proposal only): October 7th, midnight Anywhere on Earth (GMT + 12) </h4>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
@@ -146,7 +146,7 @@
 					</p>
 					<p>
 						We are inviting submissions on the broad range of topics covered at <a href="https://neurips.cc/Conferences/2020/PaperInformation/SubjectAreas">NeurIPS</a>! The <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a> is structured like a <a href="author-kit/tutorial.pdf">mini-tutorial</a> on the pre-registration process to get you started quickly.
-						Pre-registered papers will be published at the workshop. The final results will be published in the Proceedings of Machine Learning Research (<a href="http://proceedings.mlr.press/">PMLR</a>), a sister publication to the Journal of Machine Learning Research (<a href="https://www.jmlr.org/">JMLR</a>).
+						Pre-registered papers will be published at the workshop. Authors will then have the opportunity to submit the results paper to the Proceedings of Machine Learning Research (<a href="http://proceedings.mlr.press/">PMLR</a>), a sister publication to the Journal of Machine Learning Research (<a href="https://www.jmlr.org/">JMLR</a>). The review process for this second stage will aim to ensure that the authors have performed a good-faith attempt to complete the experiments described in their proposal paper.
 					</p>
 				</div>
 			</div>
@@ -167,7 +167,7 @@
 						<li><strong>Submit</strong> your paper anonymously to <a href="https://cmt3.research.microsoft.com/NeurIPSWorkshopPrereg2020">CMT</a>.
 							Differently from traditional submissions, the experimental section must only contain a description of experiments and protocol, and what conclusions can be drawn in different cases, without the results themselves.
                                                         The pre-registration proposal should use the <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a>.
-							We recommend <strong>4 pages</strong>, but we allow up to 5 pages (excluding references) for the pre-registration proposal. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. <a href="http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines">CVPR</a>. For others, e.g. <a href="https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ">NeurIPS</a>, non-archival workshops like ours do not count as dual submissions. <strong>The deadline for submissions is <strong style="color:red">October 7th.</strong></strong>
+							We recommend <strong>4 pages</strong>, but we allow up to 5 pages (excluding references) for the pre-registration proposal. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. <a href="http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines">CVPR</a>. For others, e.g. <a href="https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ">NeurIPS</a>, non-archival workshops like ours do not count as dual submissions. <strong>The deadline for submissions is <strong style="color:red">October 7th (midnight Anywhere on Earth: GMT + 12).</strong></strong>
 						<li>Besides quality and potential impact of the idea, reviewers will also assess: (1) Are the experiments appropriate for validating the core hypothesis of the work?
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
 						You will then have a <strong>rebuttal period (until October 27th)</strong> to address the comments of the reviewers, by writing (up to) a single page response.
