--- a/index.html
+++ b/index.html
@@ -18,15 +18,104 @@
 		<meta property="og:description" content="Testing whether pre-registration can help fix our peer review system." />
 		<meta property="og:url" content="https://preregister.science" />
 		<meta property="og:image" content="https://preregister.science/images/header.jpg" />
+        <script type="text/javascript">
+            /*
+            Count down until any date script-
+            By JavaScript Kit (www.javascriptkit.com)
+            Over 200+ free scripts here!
+            Modified by Robert M. Kuhnhenn, D.O. 
+            on 5/30/2006 to count down to a specific date AND time,
+            on 10/20/2007 to a new format, and 1/10/2010 to include
+            time zone offset.
+            */
+
+            var current="Thank you for your submissions. The proposal submission deadline has passed."    //-->enter what you want the script to display when the target date and time are reached, limit to 20 characters
+            var year=2020;    //-->Enter the count down target date YEAR
+            var month=10;      //-->Enter the count down target date MONTH
+            var day=7;       //-->Enter the count down target date DAY
+            var hour=23;      //-->Enter the count down target date HOUR (24 hour clock)
+            var minute=59;    //-->Enter the count down target date MINUTE
+            var tz=-12;        //-->Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
+
+            //    DO NOT CHANGE THE CODE BELOW!
+            var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec");
+
+            function countdown(yr,m,d,hr,min){
+                theyear=yr;themonth=m;theday=d;thehour=hr;theminute=min;
+                var today=new Date();
+                var todayy=today.getYear();
+                if (todayy < 1000) {todayy+=1900;}
+                var todaym=today.getMonth();
+                var todayd=today.getDate();
+                var todayh=today.getHours();
+                var todaymin=today.getMinutes();
+                var todaysec=today.getSeconds();
+                var todaystring1=montharray[todaym]+" "+todayd+", "+todayy+" "+todayh+":"+todaymin+":"+todaysec;
+                var todaystring=Date.parse(todaystring1)+(tz*1000*60*60);
+                var futurestring1=(montharray[m-1]+" "+d+", "+yr+" "+hr+":"+min);
+                var futurestring=Date.parse(futurestring1)-(today.getTimezoneOffset()*(1000*60));
+                var dd=futurestring-todaystring;
+                var dday=Math.floor(dd/(60*60*1000*24)*1);
+                var dhour=Math.floor((dd%(60*60*1000*24))/(60*60*1000)*1);
+                var dmin=Math.floor(((dd%(60*60*1000*24))%(60*60*1000))/(60*1000)*1);
+                var dsec=Math.floor((((dd%(60*60*1000*24))%(60*60*1000))%(60*1000))/1000*1);
+                if(dday<=0&&dhour<=0&&dmin<=0&&dsec<=0){
+                    document.getElementById('count2').innerHTML=current;
+                    document.getElementById('count2').style.display="inline";
+                    document.getElementById('count2').style.width="390px";
+                    document.getElementById('dday').style.display="none";
+                    document.getElementById('dhour').style.display="none";
+                    document.getElementById('dmin').style.display="none";
+                    document.getElementById('dsec').style.display="none";
+                    document.getElementById('days').style.display="none";
+                    document.getElementById('hours').style.display="none";
+                    document.getElementById('minutes').style.display="none";
+                    document.getElementById('seconds').style.display="none";
+                    document.getElementById('spacer1').style.display="none";
+                    document.getElementById('spacer2').style.display="none";
+                    return;
+                }
+                else {
+                    document.getElementById('count2').style.display="none";
+                    document.getElementById('dday').innerHTML=dday;
+                    document.getElementById('dhour').innerHTML=dhour;
+                    document.getElementById('dmin').innerHTML=dmin;
+                    document.getElementById('dsec').innerHTML=dsec;
+                    setTimeout("countdown(theyear,themonth,theday,thehour,theminute)",1000);
+                }
+            }
+        </script>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" onload="countdown(year,month,day,hour,minute)">
 		<!-- Header -->
 		<section id="header">
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
 				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop</h3>
-				<h4>Submission deadline (proposal only): October 7th, midnight Anywhere on Earth (GMT + 12) </h4>
+				<h4>Proposal submission deadline: October 7th, 23:59 Anywhere on Earth </h4>
+                <table id="table" border="10" style="width:40%;margin-left:auto;margin-right:auto;font-weight:bold;font-size:120%">
+                    <tr>
+                        <td align="center" colspan="6"><div class="numbers" id="count2">title?</div></td>
+                    </tr>
+                    <tr><td colspan="6">Proposals are due in:</td></tr>
+                    <tr id="spacer1">
+                        <td align="center" ><div class="numbers" ></div></td>
+                        <td align="center" ><div class="numbers" id="dday"></div></td>
+                        <td align="center" ><div class="numbers" id="dhour"></div></td>
+                        <td align="center" ><div class="numbers" id="dmin"></div></td>
+                        <td align="center" ><div class="numbers" id="dsec"></div></td>
+                        <td align="center" ><div class="numbers" ></div></td>
+                    </tr>
+                    <tr id="spacer2">
+                        <td align="center" ><div class="title" ></div></td>
+                        <td align="center" ><div class="title" id="days">Days</div></td>
+                        <td align="center" ><div class="title" id="hours">Hours</div></td>
+                        <td align="center" ><div class="title" id="minutes">Minutes</div></td>
+                        <td align="center" ><div class="title" id="seconds">Seconds</div></td>
+                        <td align="center" ><div class="title" ></div></td>
+                    </tr>
+                </table>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
