Rm sec from countdown.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <td align="center" ><div class="numbers" id="dday"></div></td>
                         <td align="center" ><div class="numbers" id="dhour"></div></td>
                         <td align="center" ><div class="numbers" id="dmin"></div></td>
-                        <td align="center" ><div class="numbers" id="dsec"></div></td>
+                        <!--<td align="center" ><div class="numbers" id="dsec"></div></td>-->
                         <td align="center" ><div class="numbers" ></div></td>
                     </tr>
                     <tr id="spacer2">
@@ -112,7 +112,7 @@
                         <td align="center" ><div class="title" id="days">Days</div></td>
                         <td align="center" ><div class="title" id="hours">Hours</div></td>
                         <td align="center" ><div class="title" id="minutes">Minutes</div></td>
-                        <td align="center" ><div class="title" id="seconds">Seconds</div></td>
+                        <!--<td align="center" ><div class="title" id="seconds">Seconds</div></td>-->
                         <td align="center" ><div class="title" ></div></td>
                     </tr>
                 </table>
