Add faq about author addition.

--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
 					<li><strong>Is it OK to make changes to the preregistered experimental protocol?</strong><br>
 						Although you should endeavour to follow the proposed experimental protocol as closely as possible, you may find that it is necessary to make small changes or refinements.  These changes should be carefully documented when reporting the experimental results: it is important to make clear which protocols have been modified after observing the evidence.
 					</li>
+                    <li><strong>Can the author list change from the proposal to the results paper?</strong><br>
+                        New author(s) can be added for their contribution at the hypothesis testing phase, e.g., running the experiments.
+                    </li>
 					<li><strong>What prevents authors from secretly running experiments, and submitting a proposal omitting them?</strong><br>
 						We cannot fully prevent unethical practices, but this is a risky strategy. The reviewers assume that no experiments were ran yet, so they can request significant changes to the protocol. This means that there is a significant chance those results cannot be used.
 					</li>
