--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             var current="Thank you for your submissions. The proposal submission deadline has passed."    //-->enter what you want the script to display when the target date and time are reached, limit to 20 characters
             var year=2020;    //-->Enter the count down target date YEAR
             var month=10;      //-->Enter the count down target date MONTH
-            var day=7;       //-->Enter the count down target date DAY
+            var day=9;       //-->Enter the count down target date DAY
             var hour=23;      //-->Enter the count down target date HOUR (24 hour clock)
             var minute=59;    //-->Enter the count down target date MINUTE
             var tz=-12;        //-->Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
@@ -93,7 +93,7 @@
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
 				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop</h3>
-				<h4>Proposal submission deadline: October 7th, 23:59 Anywhere on Earth </h4>
+				<h4>Proposal submission deadline: October <strike>7th</strike> 9th, 23:59 Anywhere on Earth </h4>
                 <table id="table" border="10" style="width:40%;margin-left:auto;margin-right:auto;font-weight:bold;font-size:120%">
                     <tr>
                         <td align="center" colspan="6"><div class="numbers" id="count2">title?</div></td>
@@ -256,7 +256,7 @@
 						<li><strong>Submit</strong> your paper anonymously to <a href="https://cmt3.research.microsoft.com/NeurIPSWorkshopPrereg2020">CMT</a>.
 							Differently from traditional submissions, the experimental section must only contain a description of experiments and protocol, and what conclusions can be drawn in different cases, without the results themselves.
                                                         The pre-registration proposal should use the <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a>.
-							We recommend <strong>4 pages</strong>, but we allow up to 5 pages (excluding references) for the pre-registration proposal. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. <a href="http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines">CVPR</a>. For others, e.g. <a href="https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ">NeurIPS</a>, non-archival workshops like ours do not count as dual submissions. <strong>The deadline for submissions is <strong style="color:red">October 7th (midnight Anywhere on Earth: GMT + 12).</strong></strong>
+							We recommend <strong>4 pages</strong>, but we allow up to 5 pages (excluding references) for the pre-registration proposal. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. <a href="http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines">CVPR</a>. For others, e.g. <a href="https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ">NeurIPS</a>, non-archival workshops like ours do not count as dual submissions. <strong>The deadline for submissions is <strong style="color:red">October <strike>7th</strike> 9th (midnight Anywhere on Earth: GMT + 12).</strong></strong>
 						<li>Besides quality and potential impact of the idea, reviewers will also assess: (1) Are the experiments appropriate for validating the core hypothesis of the work?
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
 						You will then have a <strong>rebuttal period (until October 27th)</strong> to address the comments of the reviewers, by writing (up to) a single page response.
