--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						<li>Read our <a href="author-kit/neurips2020_preregistration_template.zip"><strong>mini-tutorial/template</strong></a> (<a href="author-kit/tutorial.pdf">PDF</a>) &mdash; it serves as a paper template, describes the submission process and the intended spirit of a pre-registration.</li>
 						<li><strong>Submit</strong> your paper anonymously to <a href="https://cmt3.research.microsoft.com/NeurIPSWorkshopPrereg2020">CMT</a>.
 							Differently from traditional submissions, the experimental section must only contain a description of experiments and protocol, and what conclusions can be drawn in different cases, without the results themselves.
-                                                        The pre-registration proposal should use the <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a>.
+                                                        The pre-registration proposal should use the <a href="author-kit/neurips2020_preregistration_template.zip">paper template</a>. 
 							We recommend <strong>4 pages</strong>, but we allow up to 5 pages (excluding references) for the pre-registration proposal. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. <a href="http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines">CVPR</a>. For others, e.g. <a href="https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ">NeurIPS</a>, non-archival workshops like ours do not count as dual submissions. <strong>The deadline for submissions is <strong style="color:red">October <strike>7th</strike> 9th (midnight Anywhere on Earth: GMT + 12).</strong></strong>
 						<li>Besides quality and potential impact of the idea, reviewers will also assess: (1) Are the experiments appropriate for validating the core hypothesis of the work?
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
@@ -313,6 +313,9 @@
 					</li>
 					<li><strong>Where is the link to the pilot workshop you did at ICCV 2019?</strong><br>
 						The previous edition of the workshop can be found <a href="https://preregister.vision">here</a>.
+					</li>
+					<li><strong>Does my proposal paper require the "Broader Impacts" section introduced by NeurIPS last year?</strong><br>
+						A dedicated Broader Impacts section is not a required component of the proposal paper.
 					</li>
 					<li><strong>Where can I found more information about preregistration?</strong><br>
 						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
