--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
 					<li><strong>Does my proposal paper require the "Broader Impacts" section introduced by NeurIPS last year?</strong><br>
 						A dedicated Broader Impacts section is not a required component of the proposal paper.
 					</li>
+					<li><strong>I see an option for supplementary material in CMT - is it necessary to submit any additional material for this?</strong><br>
+						By default, it is not assumed that supplementary material will be required for the proposal paper.  However, it is available as an option for authors for rare use-cases in which it may be necessary.
+					</li>
 					<li><strong>Where can I found more information about preregistration?</strong><br>
 						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
 						<ul>
