--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 						A dedicated Broader Impacts section is not a required component of the proposal paper.
 					</li>
 					<li><strong>I see an option for supplementary material in CMT - is it necessary to submit any additional material for this?</strong><br>
-						By default, it is not assumed that supplementary material will be required for the proposal paper.  However, it is available as an option for authors for rare use-cases in which it may be necessary.
+						By default, it is not assumed that supplementary material will be required for the proposal paper.  However, it is available as an option to cover unusual use-cases (e.g. if the authors wish to refer to a video, or other forms of media).
 					</li>
 					<li><strong>Where can I found more information about preregistration?</strong><br>
 						There are a number of good resources for further reading around the ideas related to preregistration, including, but not limited to:
