--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <tr>
                         <td align="center" colspan="6"><div class="numbers" id="count2">title?</div></td>
                     </tr>
-                    <tr><td colspan="6">Proposals are due in:</td></tr>
+                    <!-- <tr><td colspan="6">Proposals are due in:</td></tr> -->
                     <tr id="spacer1">
                         <td align="center" ><div class="numbers" ></div></td>
                         <td align="center" ><div class="numbers" id="dday"></div></td>
