--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
                         <td align="center" colspan="6"><div class="numbers" id="count2">title?</div></td>
                     </tr>
                     <!-- <tr><td colspan="6">Proposals are due in:</td></tr> -->
-                    <tr id="spacer1">
+                    <!-- <tr id="spacer1">
                         <td align="center" ><div class="numbers" ></div></td>
                         <td align="center" ><div class="numbers" id="dday"></div></td>
                         <td align="center" ><div class="numbers" id="dhour"></div></td>
-                        <td align="center" ><div class="numbers" id="dmin"></div></td>
+                        <td align="center" ><div class="numbers" id="dmin"></div></td> -->
                         <!--<td align="center" ><div class="numbers" id="dsec"></div></td>-->
-                        <td align="center" ><div class="numbers" ></div></td>
+                        <!-- <td align="center" ><div class="numbers" ></div></td>
                     </tr>
                     <tr id="spacer2">
                         <td align="center" ><div class="title" ></div></td>
                         <td align="center" ><div class="title" id="days">Days</div></td>
                         <td align="center" ><div class="title" id="hours">Hours</div></td>
-                        <td align="center" ><div class="title" id="minutes">Minutes</div></td>
+                        <td align="center" ><div class="title" id="minutes">Minutes</div></td> -->
                         <!--<td align="center" ><div class="title" id="seconds">Seconds</div></td>-->
-                        <td align="center" ><div class="title" ></div></td>
-                    </tr>
+                        <!-- <td align="center" ><div class="title" ></div></td>
+                    </tr> -->
                 </table>
 			</div>
 		</section>
