Fix rebuttal date.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							We recommend <strong>4 pages</strong>, but we allow up to 5 pages (excluding references) for the pre-registration proposal. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. <a href="http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines">CVPR</a>. For others, e.g. <a href="https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ">NeurIPS</a>, non-archival workshops like ours do not count as dual submissions. <strong>The deadline for submissions is <strong style="color:red">October <strike>7th</strike> 9th (midnight Anywhere on Earth: GMT + 12).</strong></strong>
 						<li>Besides quality and potential impact of the idea, reviewers will also assess: (1) Are the experiments appropriate for validating the core hypothesis of the work?
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
-						You will then have a <strong>rebuttal period (until October 27th)</strong> to address the comments of the reviewers, by writing a short response.
+						You will then have a <strong>rebuttal period (until October 22nd)</strong> to address the comments of the reviewers, by writing a short response.
 						<li><strong>Decisions will be sent to authors by October 30th</strong>.</li>
 						<li><strong>On the day of the workop (December 11th or 12th, <strong style="color:red">remote</strong>)</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
 					</ul>
