--- a/index.html
+++ b/index.html
@@ -374,6 +374,92 @@
 					
 				</div>
 
+                <header class="major">
+                    <h2>Reviewers</h2>
+                </header>
+                <b>Many thanks to all the reviewers for their help:</b>
+                <div class="row">
+                    <div class="col-4 col-4-medium">
+                        Minttu  Alakuijala<br>
+                        Yuki    Asano<br>
+                        Max Bain<br>
+                        Fabien  Baradel<br>
+                        Eloïse  Berthier<br>
+                        Raphaël Berthier<br>
+                        Alberto Bietti<br>
+                        Hakan   Bilen<br>
+                        Tolga   Birdal<br>
+                        Oumayma Bounou<br>
+                        Margaux Bregere<br>
+                        Andrew  Brown<br>
+                        Andrei  Bursuc<br>
+                        Lénaïc  Chizat<br>
+                        Jesse   Dodge<br>
+                        Yuming  Du<br>
+                        Christophe  Dupuy<br>
+                        Sebastien   Ehrhardt<br>
+                        Valentin    Gabeur<br>
+                        Andrew  Gambardella<br>
+                        Aude    Genevay<br>
+                        Pascal  Germain<br>
+                        Adam    Golinski<br>
+                        Stuart  Golodetz<br>
+                        Oliver  Groth<br>
+                    </div>
+                    <div class="col-4 col-4-medium">
+                        Kai Han<br>
+                        Tengda  Han<br>
+                        Yana    Hasson<br>
+                        Eldar   Insafutdinov<br>
+                        Ahmet   Iscen<br>
+                        Xu  Ji<br>
+                        Vicky   Kalogeiton<br>
+                        A. Sophia   Koepke<br>
+                        Viveka  Kulharia<br>
+                        Valdimar Steinar Ericsson   Laenen<br>
+                        Zihang  Lai<br>
+                        Iro Laina<br>
+                        Shuda   Li<br>
+                        Roxane  Licandro<br>
+                        Erika   Lu<br>
+                        Robert  McCraith<br>
+                        Eric    Metodiev<br>
+                        Grégoire    Mialon<br>
+                        Liliane Momeni<br>
+                        Arsha   Nagrani<br>
+                        Nantas  Nardelli<br>
+                        Lukas   Neumann<br>
+                        Maxime  Oquab<br>
+                        Anuj    Pahuja<br>
+                    </div>
+                    <div class="col-4 col-4-medium">
+                        Alexander Pashevich<br>
+                        Mandela Patrick<br>
+                        Loucas  Pillaud Vivien<br>
+                        Ameya   Prabhu<br>
+                        Tom Rainforth<br>
+                        Ignacio Rocco<br>
+                        Manon   Romain<br>
+                        Vincent Roulet<br>
+                        Christian   Rupprecht<br>
+                        Levent  Sagun<br>
+                        Lukas   Schäfer<br>
+                        Li  Shen<br>
+                        Oriane  Siméoni<br>
+                        Umut    Simsekli<br>
+                        Robin   Strudel<br>
+                        Adrien  Taylor<br>
+                        Damien  Teney<br>
+                        James   Thornton<br>
+                        Jack    Valmadre<br>
+                        Bichen  Wu<br>
+                        Shangzhe    Wu<br>
+                        Weidi   Xie<br>
+                        Charig  Yang<br>
+                        Chuhan  Zhang<br>
+                    </div>
+                </div>
+
 				<header class="major">
 					<h2>Questions?</h2>
 				</header>
