--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop</h3>
+				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11</h3>
 				<h4>Proposal submission deadline: October <strike>7th</strike> 9th, 23:59 Anywhere on Earth </h4>
                 <table id="table" border="10" style="width:40%;margin-left:auto;margin-right:auto;font-weight:bold;font-size:120%">
                     <tr>
@@ -261,7 +261,7 @@
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
 						You will then have a <strong>rebuttal period (until October 22nd)</strong> to address the comments of the reviewers, by writing a short response.
 						<li><strong>Decisions will be sent to authors by October 30th</strong>.</li>
-						<li><strong>On the day of the workop (December 11th or 12th, <strong style="color:red">remote</strong>)</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
+						<li><strong>On the day of the workop (December 11th, <strong style="color:red">remote</strong>)</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
 					</ul>
 
 					<h3>Results paper</h3>
