added Kirstie to speakers

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11</h3>
-				<h4>Proposal submission deadline: October <strike>7th</strike> 9th, 23:59 Anywhere on Earth </h4>
+				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11 (from 9:20AM, New York time)</h3>
+<!--				<h4>Proposal submission deadline: October <strike>7th</strike> 9th, 23:59 Anywhere on Earth </h4>-->
                 <table id="table" border="10" style="width:40%;margin-left:auto;margin-right:auto;font-weight:bold;font-size:120%">
                     <tr>
                         <td align="center" colspan="6"><div class="numbers" id="count2">title?</div></td>
@@ -127,28 +127,34 @@
 				<!-- <p>More to be announced</p> -->
 				<div class="row gtr-150">
 					
-					<div class="col-3 col-6-small">
+					<div class="off-1 col-2 off-0-medium col-4-medium">
 						<span class="image fit"><img src="images/bengio.jpg" alt="Yoshua Bengio"></span>
 						<h3><a href="https://yoshuabengio.org/">Yoshua Bengio</a></h3>
 						<p>MILA</p>
 					</div>
 					
-					<div class="col-3 col-6-small">
+					<div class="col-2 col-4-medium">
 						<span class="image fit"><img src="images/pineau.jpg" alt="Joelle Pineau"></span>
 						<h3><a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a></h3>
 						<p>FAIR, MILA, McGill</p>
 					</div>
 
-					<div class="col-3 col-6-small">
+					<div class="col-2 col-4-medium">
 						<span class="image fit"><img src="images/bach.jpg" alt="Francis Bach"></span>
 						<h3><a href="https://www.di.ens.fr/~fbach/">Francis Bach</a></h3>
 						<p>INRIA</p>
 					</div>
 
-					<div class="col-3 col-6-small">
+					<div class="col-2 col-4-medium">
 						<span class="image fit"><img src="images/forde.jpg" alt="Jessica Zosa Forde"></span>
 						<h3><a href="https://jzf2101.github.io/">Jessica Zosa Forde</a></h3>
 						<p>Brown University</p>
+					</div>
+
+					<div class="col-2 col-4-medium">
+						<span class="image fit"><img src="images/whitaker.jpg" alt="Kirstie Whitaker"></span>
+						<h3><a href="https://www.turing.ac.uk/people/researchers/kirstie-whitaker">Kirstie Whitaker</a></h3>
+						<p>Alan Turing Institute, Cambridge University</p>
 					</div>
 
 				</div>
@@ -261,7 +267,7 @@
 						(2) Is the experimental protocol description sufficient to allow reproduction of the experiments?
 						You will then have a <strong>rebuttal period (until October 22nd)</strong> to address the comments of the reviewers, by writing a short response.
 						<li><strong>Decisions will be sent to authors by October 30th</strong>.</li>
-						<li><strong>On the day of the workop (December 11th, <strong style="color:red">remote</strong>)</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
+						<li><strong>On the day of the workop (December 11th, <strong style="color:red">remote</strong>, from 9:20AM New York time))</strong>, authors will present their proposals and (optionally) their preliminary results.</li>
 					</ul>
 
 					<h3>Results paper</h3>
