--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
 			</div>
 		</section>
 
-        <!-- -->
+        <!-- ------------------------------------------------------------------------------------------------------->
+        <section class="main style1">
+        <div class="container">
 
         <div class="col-10-medium off-1-medium col-8-large off-2-large col-8-xlarge off-2-xlarge col-8-max off-2-max">
             <p><!-- spacing --></p>
@@ -793,6 +795,8 @@
                 </table>
             </div>
         </div>
+        </div>
+        </section>
 		<!-- ------------------------------------------------------------------------------------------------------->
 		<section class="main style2" id="instructions">
 			<div class="container">
