--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Tushar Semwal, Ajinkya Mulay
+                                Ajinkya Mulay, Ayush Manish Agrawal, Tushar Semwal
                             </td>
                             <td>
                                 <em>
