--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                                 57
                             </td>
                             <td>
-                                Steffen Schneider, Shubham Krishna, Luisa Eck, Mackenzie Mathis, Matthias Bethge
+                                Steffen Schneider, Shubham Krishna, Luisa Eck, Wieland Brendel, Mackenzie Mathis, Matthias Bethge
                             </td>
                             <td>
                                 <em>
