Adding schedule via Gcal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             time zone offset.
             */
 
-            var current="Thank you for your submissions. The proposal submission deadline has passed."    //-->enter what you want the script to display when the target date and time are reached, limit to 20 characters
+            var current="On the day of the workshop, please join the live streaming at https://neurips.cc/virtual/2020/protected/workshop_16158.html using the credentials you used to sign up for NeurIPS. Schedule below."    //-->enter what you want the script to display when the target date and time are reached, limit to 20 characters
             var year=2020;    //-->Enter the count down target date YEAR
             var month=10;      //-->Enter the count down target date MONTH
             var day=9;       //-->Enter the count down target date DAY
@@ -92,7 +92,7 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
-				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11 (from 9:20AM, New York time)</h3>
+				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11 (from 9:15AM, New York time)</h3>
 <!--				<h4>Proposal submission deadline: October <strike>7th</strike> 9th, 23:59 Anywhere on Earth </h4>-->
                 <table id="table" border="10" style="width:40%;margin-left:auto;margin-right:auto;font-weight:bold;font-size:120%">
                     <tr>
@@ -158,9 +158,10 @@
 					</div>
 
 				</div>
-			</div>
 
-		</section>
+			<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FToronto&amp;src=NzBhOG01dWs0N2lhNmhicmYzcW5paXVxZzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%239E69AF&amp;mode=AGENDA" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+			</div>
+		</section>		
 
 		<!-- ------------------------------------------------------------------------------------------------------->
 		<section class="main style2 special">
