Live session over.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
 				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11 (from 9:15AM, New York time)</h3>
-                <h3 style="background-color: rgba(0,0,0,0.1)">On the day of the workshop, please join the live streaming at <br><a href="https://neurips.cc/virtual/2020/protected/workshop_16158.html">https://neurips.cc/virtual/2020/protected/workshop_16158.html</a> <br>using your NeurIPS registration credentials.<br><br> Live Q&A sessions also streamed on <a href="https://www.youtube.com/watch?v=OPU3XxqPA7o">Youtube</a></h3>
+                <h3 style="background-color: rgba(0,0,0,0.1)">On the day of the workshop, please join the live streaming at <br><a href="https://neurips.cc/virtual/2020/protected/workshop_16158.html">https://neurips.cc/virtual/2020/protected/workshop_16158.html</a> <br>using your NeurIPS registration credentials.</h3>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
